# SaaS-Bench

./: .env.example  .gitignore  LICENSE  LICENSE-DATA  README.md  pyproject.toml
docker/: README.md  code-server-deps.Dockerfile  mattermost.yml.tpl  onlyoffice.yml.tpl  owncloud.yml.tpl  pretix.yml.tpl
docs/: task_format.md  verify_protocol.md
saas_bench/: agent.py  apps.yaml  loader.py  reporting.py  run.py  slot.py  verify_runner.py
scripts/: load_images.sh  run.sh  stop_all.sh
tasks/multi-m/AASC/aasc_003/: description.md  meta.json  verify.py
tasks/multi-m/AASC/aasc_007/: meta.json  verify.py
tasks/multi-m/AASC/aasc_011/: description.md  meta.json  verify.py
tasks/multi-m/AASC/aasc_012/: description.md  meta.json  verify.py
tasks/multi-m/AASC/aasc_013/: description.md  meta.json  verify.py
tasks/multi-m/AASC/aasc_016/: description.md  meta.json  verify.py
tasks/multi-m/AASC/aasc_020/: meta.json  verify.py
tasks/multi-m/AASC/aasc_021/: description.md  meta.json  verify.py
tasks/multi-m/AASC/aasc_022/: meta.json  verify.py
tasks/multi-m/AASC/aasc_031/: meta.json  verify.py
tasks/multi-m/AASC/aasc_038/: meta.json  verify.py
tasks/multi-m/AASC/aasc_042/: meta.json  verify.py
tasks/multi-m/Agriculture/agriculture_003/: meta.json  verify.py
tasks/multi-m/Agriculture/agriculture_007/: description.md  meta.json  verify.py
tasks/multi-m/Agriculture/agriculture_011/: meta.json  verify.py
tasks/multi-m/Agriculture/agriculture_012/: meta.json  verify.py
tasks/multi-m/Agriculture/agriculture_013/: meta.json  verify.py
(+563 files in other folders)
